--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -74,7 +74,7 @@
 			"url": "Copy URL",
 			"tweet": "Twitter",
 			"facebook": "Facebook",
-			"rss": "rss"
+			"rss": "RSS Feed"
 		}
 	},
 	"docs": {
