--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -54,7 +54,7 @@
 			},
 			"git": {
 				"title": "Git integration",
-				"description": "Easily manage your git projects. Create new branches, switch between them, and sync your changes with the remote repository - all without leaving Files."
+				"description": "Easily manage your git projects. Create new branches, switch between them, and sync your changes - all without leaving Files."
 			}
 		},
 		"themes": {
