--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,142 +1,146 @@
 {
 	"metadata": {
 		"name": "{FilesName}",
-		"home": "{FilesName} • Home",
-		"docs_home": "{FilesName} • Docs",
-		"docs_page": "{FilesName} • Docs - {title}",
+		"home": "{FilesName} • Domů",
+		"docs_home": "{FilesName} • Dokumentace",
+		"docs_page": "{FilesName} • Dokumentace - {title}",
 		"blog_home": "{FilesName} • Blog",
 		"blog_page": "{FilesName} • {title}",
-		"description": "Building the best file manager for Windows."
+		"description": "Vytvoření nejlepšího správce souborů pro systém Windows."
 	},
 	"home": {
 		"community": {
-			"chip": "Community",
-			"title": "Designed and developed by you.",
-			"description": "{FilesName} is free and open source software, maintained and designed by a collective of hundreds of contributors.",
-			"discord": "Join the discussion",
-			"docs": "Become a contributor",
-			"contributions": "{amount, plural, =0 {No contributions} one {# contribution} other {# contributions}}"
+			"chip": "Komunita",
+			"title": "Navrženo a vyvinuto vámi.",
+			"description": "{FilesName} je svobodný software s otevřeným zdrojovým kódem, který spravuje a navrhuje kolektiv stovek přispěvatelů.",
+			"discord": "Připojit se k diskuzi",
+			"docs": "Staňte se přispěvatelem",
+			"contributions": "{amount, plural, =0 {Žádní přispěvatelé} one {# přispěvatel} few {# přispěvatelé} many {# přispěvatelů} other {# přispěvatelů}}"
 		},
 		"design": {
-			"chip": "Design",
-			"title": "Power meets beauty.",
-			"description": "Explore a beautiful Windows-first design. Manage all your files with increased productivity. Work across multiple folders with tabs. And so much more.",
-			"download": "Download",
-			"learn_more": "Learn more"
+			"chip": "Vzhled",
+			"title": "Síla se setkává s krásou.",
+			"description": "Prozkoumejte krásný design v systému Windows. Spravujte všechny své soubory s vyšší produktivitou. Pracujte ve více složkách s kartami. A mnohem více.",
+			"download": "Stáhnout",
+			"learn_more": "Zjistit více"
 		},
 		"features": {
-			"chip": "Features",
-			"title": "It already does that.",
-			"description": "Cloud files integration? Tabs and multiple layouts? Rich file previews? {FilesName} has it covered with robust features you expect from a modern file manager.",
-			"unknown": "Unknown",
+			"chip": "Funkce",
+			"title": "Už to umí také.",
+			"description": "Integrace cloudových souborů? Karty a více rozvržení? Bohaté náhledy souborů? {FilesName} je vybaven robustními funkcemi, které očekáváte od moderního správce souborů.",
+			"unknown": "Neznámé",
 			"cloud": {
-				"title": "Seamless cloud integration",
-				"description": "Built-in support for cloud drives such as OneDrive, Google Drive, and iCloud."
+				"title": "Bezproblémová integrace cloudu",
+				"description": "Vestavěná podpora cloudových disků, jako je OneDrive, Disk Google a iCloud."
 			},
 			"preview": {
-				"title": "Preview pane",
-				"description": "Preview photos, videos, and documents without opening them."
+				"title": "Podokno náhledu",
+				"description": "Prohlížení fotografií, videí a dokumentů bez jejich otevírání."
 			},
 			"popup-preview": {
-				"title": "QuickLook & SeerPro support",
-				"description": "Preview Office files, documents, and other file types by pressing the space bar. This feature requires installing QuickLook or SeerPro."
+				"title": "Podpora QuickLook & SeerPro",
+				"description": "Stisknutím mezerníku zobrazíte náhled souborů Office, dokumentů a dalších typů souborů. Tato funkce vyžaduje instalaci aplikace QuickLook nebo SeerPro."
 			},
 			"tags": {
-				"title": "Tag files and folders",
-				"description": "Organize and sort your files and folders with colored tags."
+				"title": "Štítkování souborů a složek",
+				"description": "Uspořádejte a roztřiďte své soubory a složky pomocí barevných štítků."
 			},
 			"tabs": {
-				"title": "Multitask with tabs",
-				"description": "Avoid multiple windows and keep your desktop clutter-free with tabs."
+				"title": "Multitask pomocí karet",
+				"description": "Vyhněte se více oknům a udržujte pracovní plochu bez nepořádku pomocí karet."
 			},
 			"columns": {
-				"title": "Column view",
-				"description": "Quickly navigate through different levels of the file system using the column layout."
+				"title": "Sloupcové zobrazení",
+				"description": "Pomocí sloupcového uspořádání můžete rychle procházet různé úrovně souborového systému."
 			},
 			"archives": {
-				"title": "View and edit archives",
-				"description": "Create and extract archives including zip, WinRar, and 7zip."
+				"title": "Prohlížení a úprava archivů",
+				"description": "Vytváření a rozbalování archivů včetně souborů zip, WinRar a 7zip."
 			},
 			"git": {
-				"title": "Git integration",
-				"description": "Easily manage your Git projects. Create new branches, switch between them, and sync your changes - all without leaving Files."
+				"title": "Integrace systému Git",
+				"description": "Snadná správa projektů Git. Vytvářejte nové větve, přepínejte mezi nimi a synchronizujte změny - a to vše bez nutnosti opouštět aplikaci Files."
 			},
 			"dual-pane": {
-				"title": "Dual pane",
-				"description": "View and manage two folders side by side with the Dual Pane feature."
+				"title": "Dvojitý panel",
+				"description": "Zobrazte a spravujte dvě složky vedle sebe pomocí funkce Dvojitého panelu."
 			},
 			"hashes": {
-				"title": "Hashes",
-				"description": "View and compare file hashes from the properties window."
+				"title": "Haše",
+				"description": "Zobrazení a porovnání hašů souborů v okně vlastností."
 			},
 			"command-palette": {
-				"title": "Command Palette",
-				"description": "Quickly access commands, features, and settings from the Command Palette."
+				"title": "Paleta příkazů",
+				"description": "Rychlý přístup k příkazům, funkcím a nastavením z palety příkazů."
+			},
+			"remap-key-bindings": {
+				"title": "Odstranit vazbu klíčů",
+				"description": "Streamujte váš pracovní postup vytvořením vazeb vlastních klíčů."
 			}
 		},
 		"themes": {
-			"chip": "Themes",
-			"title": "Distinctly personal.",
-			"description": "Have it your way. {FilesName} features a fully customizable user interface, right down to the colors and materials. Try custom themes that are built into {FilesName} or dive right into the docs and create your own.",
-			"grey_blue": "Dark Grey • Light Blue",
-			"grey_green": "Blue Grey • Neon Green",
-			"purple": "Purple",
-			"yellow_white": "Yellow • White",
-			"white_teal": "Cool White • Dark Teal",
-			"sky_blue": "Sky Blue",
-			"select_theme": "Select theme #{index}"
+			"chip": "Motivy",
+			"title": "Zcela osobní.",
+			"description": "Ať je po vašem. {FilesName} má plně přizpůsobitelné uživatelské rozhraní, ať už barvy a materiály níže. Vyzkoušejte vlastní motivy, které jsou zabudovány do {FilesName}, nebo se ponořte přímo do dokumentace a vytvořte si vlastní.",
+			"grey_blue": "Tmavě šedá • Světle modrá",
+			"grey_green": "Modro šedá • Neonově zelená",
+			"purple": "Fialová",
+			"yellow_white": "Žlutá • Bílá",
+			"white_teal": "Chladně bílá • Tmavě hnědá",
+			"sky_blue": "Modré nebe",
+			"select_theme": "Vybrat motiv #{index}"
 		}
 	},
 	"blog": {
-		"coming_soon": "More posts coming soon!",
-		"read_more": "Read More",
+		"coming_soon": "Další příspěvky se objeví již brzy!",
+		"read_more": "Zobrazit více",
 		"share": {
-			"default": "Native sharing",
-			"url": "Copy URL",
+			"default": "Přirozené sdílení",
+			"url": "Zkopírovat URL",
 			"tweet": "X",
 			"facebook": "Facebook",
-			"rss": "RSS Feed"
+			"rss": "RSS zdroj"
 		}
 	},
 	"docs": {
-		"autocomplete_empty": "No results found",
-		"edit_page": "Edit this page"
+		"autocomplete_empty": "Nebyly nalezeny žádné výsledky",
+		"edit_page": "Upravit tuto stránku"
 	},
 	"footer": {
-		"home": "Home",
-		"docs": "Docs",
-		"news": "News",
-		"download": "Download",
-		"contribute": "Contribute to {FilesName}",
-		"feedback": "Give Feedback",
-		"style_guide": "Style Guide",
-		"translations": "Translations",
-		"web_team": "Web Team"
+		"home": "Domů",
+		"docs": "Dokumentace",
+		"news": "Novinky",
+		"download": "Stáhnout",
+		"contribute": "Přispějte do {FilesName}",
+		"feedback": "Zanechat zpětnou vazbu",
+		"style_guide": "Příručka stylu",
+		"translations": "Překlad",
+		"web_team": "Webový tým"
 	},
 	"navbar": {
-		"home": "Home",
-		"docs": "Documentation",
-		"news": "News",
-		"download": "Download",
-		"themes": "Themes",
+		"home": "Domů",
+		"docs": "Dokumentace",
+		"news": "Novinky",
+		"download": "Stáhnout",
+		"themes": "Motivy",
 		"discord": "Discord",
-		"github": "Github"
+		"github": "GitHub"
 	},
 	"download": {
-		"title": "Download {FilesName}",
-		"donation_description": "{FilesName} is a community-driven project that depends on your support to grow and improve. Please consider purchasing {FilesName} through the Microsoft Store or supporting us on GitHub if you use the classic installer.",
-		"donation_button": "Donate",
+		"title": "Stáhnout {FilesName}",
+		"donation_description": "{FilesName} je komunitní projekt, jehož růst a zlepšování závisí na vaší podpoře. Zvažte prosím zakoupení {FilesName} prostřednictvím obchodu Microsoft Store nebo nás podpořte na GitHubu, pokud používáte klasický instalátor.",
+		"donation_button": "Přispět",
 		"microsoft_store": {
-			"title": "Download Files",
-			"description": "Purchasing {FilesName} through the Microsoft Store helps support the developers and allows us to continue updating the app with new features and improvements."
+			"title": "Stáhnout Files",
+			"description": "Zakoupením {FilesName} prostřednictvím obchodu Microsoft Store podpoříte vývojáře a umožníte nám pokračovat v aktualizaci aplikace o nové funkce a vylepšení."
 		},
 		"preview": {
 			"title": "Insider Preview",
-			"description": "The preview version can be installed alongside the stable release and provides early access to new features and improvements."
+			"description": "Preview verzi lze nainstalovat současně se stabilní verzí a poskytuje předběžný přístup k novým funkcím a vylepšením."
 		},
 		"self_signed": {
-			"link_text": "classic installer",
-			"description": "Don't have access to the Microsoft Store? Try our "
+			"link_text": "klasický instalátor",
+			"description": "Nemáte přístup do obchodu Microsoft Store? Zkuste náš "
 		}
 	}
 }
